[ch #160501677] create start script and run server

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a food delivery service app for a restaurant",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon --exec babel-node -- app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
