--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
+    "chai": "^4.1.2",
+    "chai-http": "^4.2.0",
     "express": "^4.16.3",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.4"
   },
   "devDependencies": {
