--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "chai-http": "^4.2.0",
     "express": "^4.16.3",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "nyc": "^13.0.1"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
