--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon --exec babel-node -- app.js",
-    "test": "nyc --reporter=html --reporter=text mocha server/tests/orderTest.js --exit --compilers js:babel-core/register"
+    "test": "nyc --reporter=html --reporter=text mocha server/tests/orderTest.js --exit --compilers js:babel-core/register",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test"
   },
   "repository": {
     "type": "git",
