--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chai-http": "^4.2.0",
     "express": "^4.16.3",
     "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.4",
     "nyc": "^13.0.1"
   },
