--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,7 @@
 version: "2"
-exclude_paths:
-- "UI"
+exclude_patterns:
+- "UI/**/*"
+- "server/tests"
 checks:
  return-statements:
    enabled: false
@@ -9,4 +10,8 @@ checks:
  identical-code:
    enabled: false
  file-lines:
-enabled: false
+  enabled: false
+ method-lines:
+  enabled: false
+ method-complexity:
+  enabled: false
