--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
+    "coveralls": "^3.0.2",
     "express": "^4.16.3",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
