--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "coveralls": "^3.0.2",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.4",
-    "nyc": "^13.0.1"
+    "nyc": "^13.0.1",
+    "pg": "^7.4.3"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
