--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon --exec babel-node -- app.js",
     "test": "nyc --reporter=html --reporter=text mocha server/tests/orderTest.js --exit --compilers js:babel-core/register",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test"
+    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
+    "createTables": "babel-node -- ./server/db/createTables && babel-node -- ./server/db/insertAdmin",
   },
   "repository": {
     "type": "git",
