--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "nyc --reporter=html --reporter=text mocha server/tests/orderTest.js --exit --compilers js:babel-core/register",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
-    "createTables": "babel-node -- ./server/db/createTables && babel-node -- ./server/db/insertAdmin",
+    "createTables": "babel-node -- ./server/db/createTables && babel-node -- ./server/db/insertAdmin"
   },
   "repository": {
     "type": "git",
