--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon --exec babel-node -- app.js",
-    "test": "nyc --reporter=html --reporter=text mocha server/tests/authTest.js --exit --compilers js:babel-core/register",
+    "test": "babel-node -- ./server/db/createTables && nyc --reporter=html --reporter=text mocha server/tests/authTest.js --exit --compilers js:babel-core/register",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "createTables": "babel-node -- ./server/db/createTables"
