--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ node_js:
 env:
 global:
  - export NODE_ENV=test
+services:
+  - postgresql
 before_script:
+- psql -c "create user marcus with password 'marcdomain';" -U postgres
+- psql -c 'create database fooddb_test;' -U postgres
 - npm install
 script:
 - npm test
