--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "coveralls": "^3.0.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.4",
