--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "jsonwebtoken": "^8.3.0",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
     "nyc": "^13.0.1",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "swagger-ui-express": "^4.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
