[Feat] Create delete order API

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fast-food-fast",
   "version": "1.0.0",
   "engines": {
-    "node": "9.11.1"
+    "node": "10.13.0"
   },
   "description": "a food delivery service app for a restaurant",
   "main": "app.js",
@@ -31,7 +31,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "bcrypt": "^3.0.2",
+    "bcrypt": "3.0.2",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
